--- a/css/style.css
+++ b/css/style.css
@@ -590,11 +590,11 @@ p {
 }
 
 /* News & Proms */
-
 .proms .row .info-box {
     height: 745px;
     display: flex;
     flex-direction: column;
+    padding: 50px;
 }
 
 .proms .row .info-box .img-prom-01 {
@@ -646,9 +646,76 @@ p {
     font-family: 'Lora', serif;
 }
 
+/* Menu */
 
+.rest-menu {
+    padding: 200px 0;
+}
 
+.rest-menu .row {
+    justify-content: center;
+    align-items: center;
+}
 
+.rest-menu .row .info-box {
+    width: 500px;
+    background: #e8e8e8;
+    padding: 100px;
+
+}
+
+.menu-ele {
+    width: 400px;
+    position: relative;
+}
+
+.rest-menu .row .active-menu {
+    margin-top:-100px;
+    color: #fff;
+    background: url('../img/misc22x.jpg');
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
+
+.rest-menu .row .active-menu::after {
+    position: absolute;
+    content: '';
+    display: table;
+    width: 100%;
+    height: 100%;
+    bottom: 0;
+    left: 0;
+    background: rgb(3,3,3);
+    background: linear-gradient(180deg, rgba(3,3,3,0.5) 0%, rgba(3,3,3,.25) 25%, rgba(3,3,3,.50) 50% );  
+}
+
+.rest-menu .row .info-box h4 {
+    padding: 100px 0;
+}
+
+.rest-menu .row .info-box h5 {
+    display: inline-block;
+    padding: 30px 0;
+}
+
+.rest-menu .row .info-box small {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 15px;
+    position: absolute;
+    right: 80px;
+    top: 35px;
+}
+
+.rest-menu .row .info-box p {
+    font-family: 'Lora', serif;
+    color: #030303;
+    line-height: 26px;
+}
+
+.rest-menu .row .active-menu p {
+    color:#fff;
+}
 
 
 
