--- a/css/style.css
+++ b/css/style.css
@@ -634,11 +634,18 @@ p {
 }
 
 /* News & Proms */
+
+.proms {
+    margin-bottom: 200px;
+}
+
 .proms .row .info-box {
     height: 745px;
     display: flex;
     flex-direction: column;
-    padding: 50px;
+    position: relative;
+    padding: 0;
+    cursor: pointer;
 }
 
 .proms .row .info-box .img-prom-01 {
@@ -647,7 +654,7 @@ p {
     background-size: cover;
     background-repeat: no-repeat;
     flex-grow: 1;
-    transition: transform 0.7s;
+    transition: all 0.7s ease-in-out;
 }
 
 .proms .row .info-box .img-prom-02 {
@@ -656,7 +663,7 @@ p {
     background-size: cover;
     background-repeat: no-repeat;
     flex-grow: 1;
-    transition: transform 0.7s;
+    transition: all 0.7s ease-in-out;
 }
 
 .proms .row .info-box .img-prom-03 {
@@ -665,7 +672,7 @@ p {
     background-size: cover;
     background-repeat: no-repeat;
     flex-grow: 1;
-    transition: transform 0.7s;
+    transition: all 0.7s ease-in-out;
 }
 
 .text-prom {
@@ -675,8 +682,55 @@ p {
     display: block;
 }
 
+.info-box:hover .img-prom-01,
+.info-box:hover .img-prom-02,
+.info-box:hover .img-prom-03 {
+    flex-grow: 4.3;
+}
+
+
 .info-box:hover .text-prom {
     display: none;
+}
+
+
+.proms .row .info-box .shadow-text {
+    width: 100%;
+    height: 100%;
+    vertical-align: middle;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity:0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: rgba(20,20,20, .25);
+    transition: 0.7s;
+}
+
+.proms .row .info-box:hover .shadow-text {
+    opacity:1;
+}
+
+.shadow-text a {
+    color: #fff;
+    font-size: 18px;
+    text-decoration: none;
+}
+
+.shadow-text p {
+    color: #fff;
+    font-size: 12px;
+    font-family: 'Lora', serif;
+}
+
+.shadow-text h4 {
+    color: #fff;
+    font-weight: 600;
+    font-size: 26px;
 }
 
 .text-prom h4 {
@@ -854,9 +908,3 @@ p {
 .copyright p {
     font-size: 12px;
 }
-
-
-
-
-
-
