--- a/css/style.css
+++ b/css/style.css
@@ -884,14 +884,26 @@ p {
     display: inline-block;
     background: #fff;
     width: 50px;
-    line-height: 50px;
+    line-height: 48px;
     border-radius: 50%;
     margin: 0 5px;
+    border: 1px transparent solid;
+    cursor: pointer;
+    transition: all .4s;
 }
 
 
+.footer .social-footer ul li:hover {
+    background: #030303;
+    border: 1px #fff solid;
+}
+
 .footer .social-footer ul li a {
     color: #030303;
+}
+
+.footer .social-footer ul li:hover a {
+    color: #fff;
 }
 
 /* Copy */
